<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="?attr/linearLayoutBcolor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        android:src="@drawable/logo_42"
        android:contentDescription="@string/image_42_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/contact"
        android:textColor="@color/primary_dark"
        android:textSize="25sp" />

    <Button
        android:id="@+id/changeTheme"
        android:onClick="changeTheme"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="140dp"
        android:hint="@string/theme"
        android:backgroundTint="?attr/buttonBackground"/>
</LinearLayout>